# adventofcode2025

./: Cargo.toml  README.md
day01/: Cargo.toml
day01/src/: dial.rs  examples.rs  lib.rs  main.rs  rotation_direction.rs  solve.rs
day02/: Cargo.toml
day02/src/: examples.rs  main.rs  solve.rs
day03/: Cargo.toml
day03/src/: examples.rs  main.rs  solve.rs
day04/: Cargo.toml
day04/src/: examples.rs  lib.rs  main.rs  paper_roll.rs  solve.rs
jagger/: Cargo.toml
jagger/src/: jagger.rs  lib.rs
