# workspaces docs: https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
[workspace]
resolver = "3"

members = [
    "jagger", # example library. Jagger is a robot that moves.
    "day01",
    "day02",
    "day03",
    # "day04",
    # "day05",
    # "day06",
    # "day07",
    # "day08",
    # "day09",
    # "day10",
    # "day11",
    # "day12",
    # "day13",
    # "day14",
    # "day15",
    # "day16",
    # "day17",
    # "day18",
    # "day19",
    # "day20",
    # "day21",
    # "day22",
    # "day23",
    # "day24",
    # "day25",
]
