# workspaces docs: https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
[workspace]
resolver = "3"

members = [
    "jagger", # example library. Jagger is a robot that moves.
    "day01",
    "day02",
    "day03",
    "day04",
    # "day05",
    # "day06",
    # "day07",
    # "day08",
    # "day09",
    # "day10",
    # "day11",
    # "day12",
]
